--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.6",
+    "serve-static": "^1.10.2",
     "time-grunt": "^1.0.0"
   },
   "engines": {
