--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,11 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "animate.css": "^3.5.1",
+    "FitText.js": "^1.2.0",
+    "wow": "^1.1.2",
+    "jquery.easing": "^1.3.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
