--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "animate.css": "^3.5.1",
     "FitText.js": "^1.2.0",
     "wow": "^1.1.2",
-    "jquery.easing": "^1.3.1"
+    "jquery.easing": "^1.3.1",
+    "auth0-lock-passwordless": "^2.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -27,6 +28,9 @@
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
       ]
+    },
+    "auth0-lock-passwordless": {
+      "main": "build/lock-passwordless.js"
     }
   }
 }
