--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^2.0.1",
     "grunt-postcss": "^0.8.0",
+    "grunt-shell": "^1.2.1",
     "grunt-svgmin": "^3.1.2",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
@@ -33,6 +34,7 @@
     "karma": "^0.13.22",
     "karma-jasmine": "^0.3.8",
     "karma-phantomjs-launcher": "^1.0.0",
+    "load-grunt-tasks": "^3.4.1",
     "phantomjs-prebuilt": "^2.1.6",
     "serve-static": "^1.10.2",
     "time-grunt": "^1.0.0"
