--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "FitText.js": "^1.2.0",
     "wow": "^1.1.2",
     "jquery.easing": "^1.3.1",
-    "auth0-lock-passwordless": "^2.2.2"
+    "auth0-lock-passwordless": "^2.2.2",
+    "angulartics-google-analytics": "^0.1.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
